# Orbiit

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAQ.md  FEATURES.md  LEGAL.md  LICENSE  QUICKSTART.md  README.md  ROADMAP.md  SECURITY.md  SETUP_GUIDE.md  analysis_options.yaml  build.ps1  build_icon.ps1  deploy.ps1  deps.json  installer.iss  pubspec.yaml  rebuild_native.ps1  release.ps1  restore_images_instruction.ps1  run_windows.ps1  wiigc_fusion_library.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  flutter-ci.yml
android/app/: build.gradle.kts
docs/: COVER_ART_USAGE.md  IMPLEMENTATION_STATUS.md  MASTER_PLAN.md  MOUSE_TRACKER_COMPLETE_FIX.md  MOUSE_TRACKER_FIX.md  ROCK_BAND_DLC_GUIDE.md  UI_GUIDE.md
forge_core/: CMakeLists.txt  banner_parser.cpp  banner_parser.h  forge_manager.cpp  forge_manager.h  handshake_core.cpp  handshake_core.h  platform_identifier.cpp  platform_identifier.h
games/: Super Mario Sunshine [GMSE01].iso
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: globals.dart  main.dart  main_health.dart
lib/core/: app_logger.dart  constants.dart  core.dart  error_handler.dart  errors.dart  extensions.dart  forge_native.dart  native_library_loader.dart  result.dart
lib/ffi/: forge_bridge.dart  isolate_downloader.dart  platform_bridge.dart
lib/models/: controller_config.dart  disc_metadata.dart  game_result.dart  theme.dart
lib/providers/: archive_org_provider.dart  cover_art_provider.dart  discovery_provider.dart  discovery_storefront.dart  forge_provider.dart  osc_provider.dart  romsfun_provider.dart  theme_provider.dart  wiiload_provider.dart
lib/screens/: codes.dart  controller_customization_screen.dart  (+18 more)
linux/: CMakeLists.txt
macos/: Podfile
native/: CMakeLists.txt  forge_logic.cpp  forge_logic.h
native/forge/include/: forge_core.h  forge_core_v3.h
test/: widget_test.dart
tools/: README.md  setup_tools.ps1
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+152 files in other folders)
